--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -4,22 +4,8 @@ h1,
 h2,
 h3 {
   font-family: 'Coustard', serif;
-  color: hsl(262, 49%, 14%);
-  margin: 0;
-}
-
-body {
-  margin: 0 auto;
-  height: 100vh;
-  background-color: #faaca8;
   color: #1f1235;
-  font-family: 'Space Grotesk', sans-serif;
-  background-image: linear-gradient(
-    19deg,
-    #faaca8 0%,
-    #ddd6f3 50%,
-    #85f0b0 100%
-  );
+  margin: 0;
 }
 
 .btn-grad {
@@ -75,6 +61,25 @@ body {
   box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
 }
 
+.loadingText {
+  margin: 0 auto;
+  grid-row: 3/4;
+  grid-column: 2/3;
+}
+
+.loadingModule {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  display: grid;
+  background-color: white;
+  padding: 50px;
+  border-radius: 20px;
+  margin: 0 auto;
+  white-space: nowrap;
+  text-align: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
+}
+
 .loginTextbox {
   padding: 10px 40px;
   border: 1px solid rgba(149, 157, 165, 0.2);
@@ -82,7 +87,6 @@ body {
   border-radius: 10px;
   background-color: white;
   margin-bottom: 15px;
-  min-width: 100px;
 }
 
 .loginTextbox:focus {
@@ -96,6 +100,19 @@ body {
   height: 100vh;
 }
 
+body {
+  margin: 0 auto;
+  height: 100%;
+  background-color: #faaca8;
+  color: #1f1235;
+  font-family: 'Space Grotesk', sans-serif;
+  background-image: linear-gradient(
+    19deg,
+    #faaca8 0%,
+    #ddd6f3 50%,
+    #85f0b0 100%
+  );
+}
 #logIn {
   margin-bottom: 15px;
 }
@@ -107,7 +124,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 100px 10fr;
+  grid-template-rows: 0.75fr 10fr;
 }
 
 .navBar {
@@ -119,7 +136,6 @@ body {
   border-bottom: 1px solid rgba(149, 157, 165, 0.2);
   margin: 0 auto;
   position: fixed;
-  min-width: 375px;
   top: 0;
 }
 
@@ -134,252 +150,113 @@ body {
   grid-column: 3/4;
 }
 
-@media screen and (min-width: 500px) {
-  .mainContainer {
-    display: grid;
-    grid-row: 2/3;
-    grid-template-columns: 1fr 4fr 1fr;
-  }
-
-  .transactionAnalytics {
-    padding-top: 10px;
-    display: grid;
-    grid-column: 1/4;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.25fr 10fr;
-    width: 100%;
-  }
-
-  .transactionAnalyticsHeader {
-    display: grid;
-    margin: 0;
-    grid-row: 1/2;
-    grid-column: 1/4;
-  }
-
-  .charts {
-    display: grid;
-    grid-column: 1/4;
-    padding-top: 15px;
-    overflow-x: auto;
-    grid-template-columns: 2fr 1fr;
-    width: 100%;
-  }
-
-  .leftChart {
-    grid-column: 1/2;
-    z-index: -1;
-  }
-
-  .rightChart {
-    display: grid;
-    grid-column: 2/3;
-    grid-template-columns: 1fr 0.75fr 0.25fr 1fr;
-    grid-template-rows: 1.5fr 1fr;
-    white-space: nowrap;
-    text-align: center;
-  }
-
-  .footprintNumber {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    font-size: 5rem;
-    vertical-align: text-bottom;
-    align-self: flex-end;
-    text-align: end;
-  }
-
-  .footprintMeasure {
-    grid-column: 3/4;
-    grid-row: 1/2;
-    align-self: end;
-    justify-self: start;
-    vertical-align: text-bottom;
-    margin-bottom: 30px;
-  }
-
-  .footprintLabel {
-    grid-column: 2/4;
-    grid-row: 2/3;
-    vertical-align: text-top;
-  }
-
-  .dataContainer {
-    grid-column: 2/3;
-  }
-
-  .transactionComponent {
-    display: grid;
-    grid-template-columns: 0.25fr 0.75fr 3fr 1fr 1fr;
-    background-color: white;
-    border-radius: 10px;
-    margin: 10px 0px;
-    align-content: center;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
-  }
-  .txnIcon {
-    grid-column: 1/2;
-    margin: 10px;
-  }
-
-  .txnDate {
-    grid-column: 2/3;
-    align-self: center;
-    justify-self: center;
-    white-space: nowrap;
-    text-align: center;
-  }
-
-  .txnMerchant {
-    grid-column: 3/4;
-    align-self: center;
-    text-align: center;
-    white-space: nowrap;
-    text-align: center;
-  }
-
-  .txnCarbon {
-    grid-column: 4/5;
-    align-self: center;
-    justify-self: center;
-  }
-
-  .txnAmount {
-    grid-column: 5/6;
-    align-self: center;
-    justify-self: center;
-    white-space: nowrap;
-    text-align: center;
-  }
+.mainContainer {
+  display: grid;
+  grid-row: 2/3;
+  height: 100vh;
+  grid-template-columns: 1fr 4fr 1fr;
 }
 
-@media screen and (max-width: 375px) {
-  body {
-    min-width: 320px;
-    margin: 0 auto;
-  }
+.transactionAnalytics {
+  padding-top: 10px;
+  display: grid;
+  grid-column: 1/4;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.25fr 10fr;
+  width: 100%;
+}
 
-  .mainContainer {
-    display: grid;
-    grid-row: 2/3;
-  }
+.transactionAnalyticsHeader {
+  display: grid;
+  margin: 0;
+  grid-row: 1/2;
+  grid-column: 1/4;
+}
 
-  .bankButtonText {
-    display: none;
-  }
+.charts {
+  display: grid;
+  grid-column: 1/4;
+  padding-top: 15px;
+  overflow-x: auto;
+  grid-template-columns: 2fr 1fr;
+  width: 100%;
+}
 
-  .transactionComponent {
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    background-color: white;
-    border-radius: 10px;
-    margin: 10px;
-    align-content: center;
-    padding: 10px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
-  }
-  .txnIcon {
-    grid-column: 1/2;
-    grid-row: 1/3;
-    margin: 10px;
-    text-align: left;
-    vertical-align: top;
-  }
+.leftChart {
+  grid-column: 1/2;
+}
 
-  .txnDate {
-    grid-column: 2/3;
-    grid-row: 1/3;
-    align-self: center;
-    white-space: nowrap;
-    text-align: left;
-  }
+.rightChart {
+  display: grid;
+  grid-column: 2/3;
+  grid-template-columns: 1fr 0.75fr 0.25fr 1fr;
+  grid-template-rows: 1.5fr 1fr;
+  white-space: nowrap;
+  text-align: center;
+}
 
-  .txnMerchant {
-    grid-column: 1/5;
-    grid-row: 4/5;
-    align-self: center;
-    text-align: left;
-  }
+.footprintNumber {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  font-size: 5rem;
+  vertical-align: text-bottom;
+  align-self: flex-end;
+  text-align: end;
+}
 
-  .txnCarbon {
-    font-size: x-large;
-    grid-column: 5/7;
-    grid-row: 1/3;
-    text-align: right;
-    align-self: center;
-  }
+.footprintMeasure {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  align-self: end;
+  justify-self: start;
+  vertical-align: text-bottom;
+  margin-bottom: 30px;
+}
 
-  .txnAmount {
-    grid-column: 5/7;
-    grid-row: 4/5;
-    text-align: right;
-    align-self: center;
-    white-space: nowrap;
-    color: #b8a4e0;
-  }
+.footprintLabel {
+  grid-column: 2/4;
+  grid-row: 2/3;
+  vertical-align: text-top;
+}
 
-  .transactionAnalytics {
-    padding-top: 10px;
-    display: grid;
-    grid-column: 1/4;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.25fr 10fr;
-    width: 100%;
-  }
+.dataContainer {
+  grid-column: 2/3;
+}
 
-  .transactionAnalyticsHeader {
-    display: grid;
-    margin: 0 20px;
-    grid-row: 1/2;
-    grid-column: 1/4;
-  }
+.transactionComponent {
+  display: grid;
+  grid-template-columns: 0.25fr 0.75fr 3fr 1fr 1fr;
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px 0px;
+  align-content: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
+}
+.txnIcon {
+  grid-column: 1/2;
+  margin: 10px;
+}
 
-  .charts {
-    display: grid;
-    grid-column: 1/4;
-    padding-top: 15px;
-    overflow-x: auto;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.5fr;
-    width: 100%;
-  }
+.txnDate {
+  grid-column: 2/3;
+  align-self: center;
+  justify-self: center;
+}
 
-  .leftChart {
-    grid-row: 1/2;
-    height: 300px;
-    z-index: -1;
-  }
+.txnMerchant {
+  grid-column: 3/4;
+  align-self: center;
+  text-align: center;
+}
 
-  .rightChart {
-    display: grid;
-    grid-template-columns: 1fr 0.75fr 0.25fr 1fr;
-    grid-template-rows: 1.5fr 1fr;
-    white-space: nowrap;
-    text-align: center;
-  }
+.txnCarbon {
+  grid-column: 4/5;
+  align-self: center;
+  justify-self: center;
+}
 
-  .footprintNumber {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    font-size: 5rem;
-    vertical-align: text-bottom;
-    align-self: flex-end;
-    text-align: end;
-  }
-
-  .footprintMeasure {
-    grid-column: 3/4;
-    grid-row: 1/2;
-    align-self: end;
-    justify-self: start;
-    vertical-align: text-bottom;
-    margin-bottom: 30px;
-  }
-
-  .footprintLabel {
-    grid-column: 2/4;
-    grid-row: 2/3;
-    vertical-align: text-top;
-  }
+.txnAmount {
+  grid-column: 5/6;
+  align-self: center;
+  justify-self: center;
 }
