--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -63,6 +63,18 @@ body {
   margin-bottom: 30px;
 }
 
+.DataConnectionModule {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-color: white;
+  padding: 50px;
+  border-radius: 20px;
+  margin: 0 auto;
+  white-space: nowrap;
+  text-align: center;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
+}
+
 .loginModule {
   grid-row: 2/3;
   grid-column: 2/3;
@@ -105,9 +117,8 @@ body {
   margin-bottom: 15px;
 }
 
-.container {
-  display: grid;
-  grid-template-rows: 100px 10fr;
+.mainContent {
+  grid-column: 2/3;
 }
 
 .navBar {
@@ -138,6 +149,7 @@ body {
   .mainContainer {
     display: grid;
     grid-row: 2/3;
+    grid-template-rows: 0.25fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 4fr 1fr;
   }
 
@@ -148,6 +160,13 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 0.25fr 10fr;
     width: 100%;
+  }
+
+  .container {
+    display: grid;
+    grid-template: 1fr 4fr 1fr;
+    grid-template-rows: 100px 10fr;
+    height: 100vh;
   }
 
   .transactionAnalyticsHeader {
@@ -238,30 +257,40 @@ body {
     text-align: center;
   }
 
-  .txnCarbon {
-    grid-column: 4/5;
-    align-self: center;
-    justify-self: center;
-  }
-
   .txnAmount {
-    grid-column: 5/6;
+    grid-column: 4/5;
+    grid-row: 1/2;
     align-self: center;
     justify-self: center;
     white-space: nowrap;
     text-align: center;
+    color: #b8a4e0;
+  }
+  .txnCarbon {
+    grid-column: 5/6;
+    align-self: center;
+    justify-self: center;
   }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 500px) {
   body {
     min-width: 320px;
     margin: 0 auto;
   }
 
+  .container {
+    display: grid;
+    grid-template-rows: 100px 10fr;
+    height: 100vh;
+  }
+
   .mainContainer {
     display: grid;
     grid-row: 2/3;
+    max-width: 100vw;
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.5fr 1fr 1fr;
   }
 
   .bankButtonText {
@@ -339,7 +368,6 @@ body {
     display: grid;
     grid-column: 1/4;
     padding-top: 15px;
-    overflow-x: auto;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 0.5fr;
     width: 100%;
@@ -381,5 +409,14 @@ body {
     grid-column: 2/4;
     grid-row: 2/3;
     vertical-align: text-top;
+  }
+
+  .DataConnectionModule {
+    grid-column: 1/2;
+    background-color: white;
+    padding: 10px;
+    border-radius: 20px;
+    margin: 20;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 24px;
   }
 }
